# dbirth

./: .env  .gitattributes  .pre-commit-config.yaml  README.md  code2LLM 2.txt  main.py  pyproject.toml
.github/workflows/: ci-self-hosted-linux.yml  ci-self-hosted-win.yml  ci.yml
docs/: Metada Sync Microservice - PostgreSQL Schema & ERD (Release 1.1).md  Metadata Sync Microservice Solution Design - Release 1.1.md  Testing Specification - Metadata Sync Microservice - Release 1.0.md
docs/apis/: canary_saf_index.html  canary_views_index.html
docs/benchmarks/: dbirth-ingest-performance-2025-10-08.md
docs/checklists/: ep04-migration-verification.md
docs/contracts/: canary_saf_and_views.yaml
docs/diagrams/: identity-lifecycle.mmd
docs/epics/: EP-01 - Sparkplug DBIRTH Ingestion (EMQX).md  EP-02 - Payload Decode & Alias Resolution.md  EP-03 - UNS Path Normalization & Identity Model.md  EP-04 - PostgreSQL Persistence & Constraints.md  EP-05 - CDC Diff Listener with Debounce.md  EP-06 - Canary Write API Integration (Rate Limit, Retries).md  EP-07 - Security & Configuration (TLS, Secrets).md  EP-08 - Observability & Operational Readiness.md  EP-09 - Test Infrastructure & Quality Gates.md  MVP Epic Backlog - Release 1.0.md
docs/playbooks/: ingestion-performance.md  local-testing-playbook.md  postgresql-local-setup.md
my_private/: AGENTS.md  bd_tests.py  diagram_dataFlow_soFar.md  ingest_fixture.py  notas.md  prompts_generate_tasks_list_from_epics.md
scripts/: canary_cdc_smoke.py  canary_write_smoke.py  ingest_fixture.py
tests/: conftest.py
(+85 files in other folders)
